--- a/usr/navig/makefile
+++ b/usr/navig/makefile
@@ -5,9 +5,6 @@ all: navig
 navig:
 	amake -g navig.adb -largs $(C_DIR)/libx_mng.a -lX11
 
-AFPX.DSC: AFPX.LIS
-	afpx_bld
-
 clean:
-	rm *.o *.ali
+	rm *.o *.ali navig
 
