Always amake approxp and import

--- a/usr/approx/makefile
+++ b/usr/approx/makefile
@@ -1,12 +1,12 @@
 LIBX_MNG=/users/malaise/ada/c/libx_mng.a
 ADA_OPT=-g
 
-all: approxp import AFPX.DSC
+all: do_approxp do_import AFPX.DSC
 
-approxp: 
+do_approxp: 
 	amake $(ADA_OPT) approxp.adb -largs $(LIBX_MNG) -lX11
 
-import: 
+do_import: 
 	amake $(ADA_OPT) import.adb -largs $(LIBX_MNG) -lX11
 
 AFPX.DSC: AFPX.LIS
