--- a/usr/approx/makefile
+++ b/usr/approx/makefile
@@ -1,13 +1,16 @@
 LIBX_MNG=/users/malaise/ada/c/libx_mng.a
 ADA_OPT=-g
 
-all: do_approxp do_import AFPX.DSC
+all: do_approxp do_import do_export AFPX.DSC
 
 do_approxp: 
 	amake $(ADA_OPT) approxp.adb -largs $(LIBX_MNG) -lX11
 
 do_import: 
 	amake $(ADA_OPT) import.adb -largs $(LIBX_MNG) -lX11
+
+do_export: 
+	amake $(ADA_OPT) export.adb -largs $(LIBX_MNG) -lX11
 
 AFPX.DSC: AFPX.LIS
 	afpx_bld
