--- a/usr/heart/makefile
+++ b/usr/heart/makefile
@@ -1,6 +1,8 @@
 C_DIR=/users/malaise/ada/c
 
-all: AFPX.DSC
+all: do_heart AFPX.DSC
+
+do_heart:
 	amake heart.adb -largs $(C_DIR)/libx_mng.a -lX11
 
 AFPX.DSC: AFPX.LIS
