make .so export .a and .so in /usr/local/lib

--- a/c/makefile
+++ b/c/makefile
@@ -1,3 +1,4 @@
+DEST=/usr/local/lib
 CC=gcc
 CCOPT=-g -c -DDEBUG
 OBJS=x_color.o x_font.o x_line.o x_export.o x_file.o x_key.o x_screen.o timeval.o
@@ -6,14 +7,25 @@ OBJS=x_color.o x_font.o x_line.o x_export.o x_file.o x_key.o x_screen.o timeval.
 .c.o:
 	$(CC) $(CCOPT) $<
 
-all: libx_mng.a test_x
+all: $(DEST)/libx_mng.so $(DEST)/libx_mng.a test_x
 
 clean :
-	rm *.o libx_mng.a
+	rm *.o libx_mng.a libx_mng.so
 
 test_x : libx_mng.a test_x.c
 	$(CC) -o test_x test_x.c libx_mng.a -lX11
 
 libx_mng.a : $(OBJS)
 	ar rvs libx_mng.a $(OBJS)
+
+libx_mng.so : libx_mng.a
+	ld -shared -o libx_mng.so $(OBJS)
+
+$(DEST)/libx_mng.a : libx_mng.a
+	cp libx_mng.a $(DEST)
+	chmod a+r $(DEST)/libx_mng.a
+
+$(DEST)/libx_mng.so : libx_mng.so
+	cp libx_mng.so $(DEST)
+	chmod a+r $(DEST)/libx_mng.so
 
