--- a/usr/mmind/makefile
+++ b/usr/mmind/makefile
@@ -1,6 +1,8 @@
+LIBX_MNG=-lx_mng
+
 all:
-	amake t_color.adb -largs /users/malaise/ada/c/libx_mng.a -lX11
-	amake mmind.adb -largs /users/malaise/ada/c/libx_mng.a -lX11
+	amake t_color.adb -largs $(LIBX_MNG) -lX11
+	amake mmind.adb -largs $(LIBX_MNG) -lX11
 
 clean:
 	rm *.o *.ali
