--- a/usr/sokoban/makefile
+++ b/usr/sokoban/makefile
@@ -1,6 +1,8 @@
+LIBX_MNG=-lx_mng
+
 all:
-	amake t_input.adb -largs /users/malaise/ada/c/libx_mng.a -lX11
-	amake sokoban.adb -largs /users/malaise/ada/c/libx_mng.a -lX11
+	amake t_input.adb -largs $(LIBX_MNG) -lX11
+	amake sokoban.adb -largs $(LIBX_MNG) -lX11
 	amake trans.adb
 clean:
 	rm *.o *.ali
