--- a/usr/navig/makefile
+++ b/usr/navig/makefile
@@ -1,9 +1,11 @@
-
 all: navig
 
 navig:
 	amake -g navig.adb -largs -lx_mng -lX11
 
 clean:
-	rm *.o *.ali navig
+	rm *.o *.ali
+
+clean_exe:
+	rm navig
 
