--- a/usr/mmind/makefile
+++ b/usr/mmind/makefile
@@ -1,12 +1,11 @@
 LIBX_MNG=-lx_mng
 
 all:
-	amake t_color.adb -largs $(LIBX_MNG) -lX11
 	amake mmind.adb -largs $(LIBX_MNG) -lX11
 
 clean:
 	rm *.o *.ali
 
 clean_exe:
-	rm t_color mmind
+	rm mmind
 
