Creation of sys_calls for time_t to struct tm conversion

--- a/c/makefile
+++ b/c/makefile
@@ -1,7 +1,8 @@
 DEST=/usr/local/lib
 CC=gcc
 CCOPT=-g -c -DDEBUG
-OBJS=x_color.o x_font.o x_line.o x_export.o x_file.o x_key.o x_screen.o timeval.o
+OBJS=x_color.o x_font.o x_line.o x_export.o x_file.o x_key.o x_screen.o \
+     timeval.o sys_calls.o
 
 
 .c.o:
