Link with x_mng (directory.file_stat)

--- a/usr/pexec/makefile
+++ b/usr/pexec/makefile
@@ -1,11 +1,12 @@
 DEST=/users/malaise/bin
 
+
 # pexec_exe is a dummy target to always execute amake
 #  and do it BEFORE evaluating $(DEST)/pexec versus pexec
 all : pexec_exe $(DEST)/pexec
 
 pexec_exe :
-	amake pexec.adb
+	amake pexec.adb -largs -lx_mng -lX11
 
 $(DEST)/pexec : pexec
 	cp pexec $(DEST)
