--- a/build
+++ b/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 if [ "$1" = "html" ] ; then
-  gnathtml.pl reposit/*.ad* usr/*/*.ad*
-  exit 0;
+  gnathtml.pl -D -o `pwd`/html */*.ad? */*/*.ad?
+  exit 0
 fi
 
 cur=`pwd`
