--- a/usr/account/makefile
+++ b/usr/account/makefile
@@ -1,16 +1,24 @@
-LIBX_MNG=-lx_mng
-LX=-largs $(LIBX_MNG) -lX11
+LIBC_DIR=$(HOME)/ada/c
+LIBX_MNG=x_mng
+LX=-largs -L$(LIBC_DIR) -l$(LIBX_MNG) -lX11
 
-all: do_all AFPX.DSC
+EXE=account
 
-do_all:
+all: $(EXE) AFPX.DSC
+
+new: 
+	rm -f $(EXE)
+	amake account $(LX)
+	
+account:
+	amake $@ $(LX)
 
 AFPX.DSC: AFPX.LIS
 	afpx_bld
 
 clean:
-	rm *.o *.ali
+	rm -f *.o *.ali b~*
 
 clean_exe:
-	rm -f account AFPX.DSC AFPX.FLD AFPX.INI
+	rm -f AFPX.DSC AFPX.FLD AFPX.INI $(EXE)
 
