make account.static

--- a/usr/account/makefile
+++ b/usr/account/makefile
@@ -1,8 +1,9 @@
 LIBC_DIR=$(HOME)/ada/c
 LIBX_MNG=x_mng
 LX=-largs -L$(LIBC_DIR) -l$(LIBX_MNG) -lX11
+LX_STATIC=-largs $(LIBC_DIR)/lib$(LIBX_MNG).a -lX11
 
-EXE=account
+EXE=account.static account
 
 all: $(EXE) AFPX.DSC
 
@@ -12,6 +13,9 @@ new:
 	
 account:
 	amake $@ $(LX)
+
+account.static:
+	amake account -o $@ $(LX_STATIC) 
 
 AFPX.DSC: AFPX.LIS
 	afpx_bld
