--- a/c/makefile
+++ b/c/makefile
@@ -1,6 +1,6 @@
 DEST=/usr/local/lib
 CC=gcc
-CCOPT=-g -c -DDEBUG
+CCOPT=-g -c -DDEBUG -Wall
 OBJS=x_color.o x_font.o x_line.o x_export.o x_file.o x_key.o x_screen.o \
      timeval.o socket.o sys_calls.o
 
