--- a/usr/mmind/makefile
+++ b/usr/mmind/makefile
@@ -1,11 +1,22 @@
-LIBX_MNG=-lx_mng
+LIBC_DIR=$(HOME)/ada/c
+LIBX_MNG=x_mng
+LX=-largs -L$(LIBC_DIR) -l$(LIBX_MNG) -lX11
 
-all:
-	amake mmind.adb -largs $(LIBX_MNG) -lX11
+EXE=mmind mmind_asc
+
+all: exes
+
+exes:
+	@for file in $(EXE); do \
+	  amake $$file $(LX); \
+	done;
+
+AFPX.DSC: AFPX.LIS
+	afpx_bld
 
 clean:
 	rm *.o *.ali
 
 clean_exe:
-	rm mmind
+	rm -f AFPX.DSC AFPX.FLD AFPX.INI $(EXE)
 
