--- a/usr/mcd/makefile
+++ b/usr/mcd/makefile
@@ -1,13 +1,14 @@
 LIBC_DIR=$(HOME)/ada/c
 LIBX_MNG=x_mng
 LX=-largs -L$(LIBC_DIR) -l$(LIBX_MNG) -lX11
+ADA_FLAG=-gnato
 
 EXE=mcd
 
 all: $(EXE)
 
 mcd:
-	amake $@ $(LX)
+	amake $(ADA_FLAG) $@ $(LX)
 
 AFPX.DSC: AFPX.LIS
 	afpx_bld
