Add several links with x_mng (cause sys_calls).

--- a/usr/misc/makefile
+++ b/usr/misc/makefile
@@ -3,7 +3,7 @@ LIBX_MNG=-lx_mng
 
 
 all:
-	amake adand.adb
+	amake adand.adb -largs $(LIBX_MNG) -lX11
 	cp adand $(DEST)
 	amake beep.adb
 	cp beep $(DEST)
@@ -11,9 +11,9 @@ all:
 	cp ddir $(DEST)
 	amake e2f.adb
 	amake fact.adb
-	amake g.adb
+	amake g.adb -largs -largs $(LIBX_MNG) -lX11
 	amake hanoi.adb
-	amake impot_02.adb
+	amake impot_02 -largs $(LIBX_MNG) -lX11
 	amake look_95.adb
 	amake mlbx_overflow.adb
 	amake one_of_arg.adb
