Link with x_mng (cause sys_calls).

--- a/usr/simusi/makefile
+++ b/usr/simusi/makefile
@@ -1,6 +1,8 @@
+LIBX_MNG=-lx_mng
+
 all:
-	amake t_file.adb
-	amake simusi.adb
+	amake t_file.adb -largs $(LIBX_MNG) -lX11
+	amake simusi.adb -largs $(LIBX_MNG) -lX11
 
 clean:
 	rm *.o *.ali
