Add signal handling.

--- a/c/makefile
+++ b/c/makefile
@@ -25,7 +25,7 @@ libx_mng.a : $(OBJS)
 	ar rvs libx_mng.a $(OBJS)
 
 libx_mng.so : libx_mng.a
-	ld -shared -o libx_mng.so $(OBJS)
+	ld -shared -o libx_mng.so libx_mng.a
 
 $(DEST)/libx_mng.a : libx_mng.a
 	cp libx_mng.a $(DEST)
