Select moved out of X.

--- a/usr/account/makefile
+++ b/usr/account/makefile
@@ -1,7 +1,9 @@
 LIBC_DIR=$(HOME)/ada/c
 LIBX_MNG=x_mng
-LX=-largs -L$(LIBC_DIR) -l$(LIBX_MNG) -lX11
-LX_STATIC=-largs $(LIBC_DIR)/lib$(LIBX_MNG).a -lX11
+LIBCUTIL=cutil
+LXC=-largs -l$(LIBX_MNG) -L$(LIBC_DIR) -l$(LIBCUTIL) -lX11
+LXC_STATIC=-largs $(LIBC_DIR)/lib$(LIBX_MNG).a $(LIBC_DIR)/lib$(LIBCUTIL).a \
+           -lX11
 
 EXE=account.static account import export
 
@@ -9,19 +11,19 @@ all: $(EXE) AFPX.DSC
 
 new: 
 	rm -f $(EXE)
-	amake account $(LX)
+	amake account $(LXC)
 	
 account:
-	amake $@ $(LX)
+	amake $@ $(LXC)
 
 import:
-	amake $@ $(LX)
+	amake $@ $(LXC)
 
 export:
-	amake $@ $(LX)
+	amake $@ $(LXC)
 
 account.static:
-	amake account -o $@ $(LX_STATIC) 
+	amake account -o $@ $(LXC_STATIC) 
 
 AFPX.DSC: AFPX.LIS
 	afpx_bld
