--- a/usr/mmind/makefile
+++ b/usr/mmind/makefile
@@ -1,6 +1,4 @@
-LIBC_DIR=$(HOME)/ada/c
-LIBX_MNG=x_mng
-LX=-largs -L$(LIBC_DIR) -l$(LIBX_MNG) -lX11
+LXC=-largs -lx_mng -lcutil -lX11
 
 EXE=mmind mmind_asc
 
@@ -8,7 +6,7 @@ all: exes
 
 exes:
 	@for file in $(EXE); do \
-	  amake $$file $(LX); \
+	  amake $$file $(LXC); \
 	done;
 
 AFPX.DSC: AFPX.LIS
