--- a/usr/dictio/makefile
+++ b/usr/dictio/makefile
@@ -1,25 +1,10 @@
-LC=-largs -lcutil
+include $(HOME)/Makefiles/common.mk
 
-EXE=dictio t_dictio
+ADAVIEW := $(REPOSIT)
+EXES := dictio t_dictio
 
-all: $(EXE)
+CLIBS_dictio := cutil
+CLIBS_t_dictio := cutil
 
-new: 
-	rm -f $(EXE)
-	make
-
-dictio:
-	amake $@ $(LC)
-
-t_dictio:
-	amake $@ $(LC)
-
-clean:
-	-rm -f *.o *.ali b~*
-
-clean_exe:
-	-rm -f $(EXE)
-
-clean_all: clean clean_exe
-
+include $(TEMPLATES)/ada.mk
 
