--- a/usr/heart/makefile
+++ b/usr/heart/makefile
@@ -1,16 +1,10 @@
-LXC=-largs -lx_mng -lcutil -lX11
+include $(HOME)/Makefiles/common.mk
 
-all: do_heart AFPX.DSC
+ADAVIEW := $(REPOSIT)
+AFPX := true
+EXES := heart
 
-do_heart:
-	amake heart.adb $(LXC)
+CLIBS_heart := x_mng cutil X11
 
-AFPX.DSC: AFPX.LIS
-	afpx_bld
-
-clean:
-	rm *.o *.ali
-
-clean_exe:
-	rm heart AFPX.DSC AFPX.FLD AFPX.INI
+include $(TEMPLATES)/ada.mk
 
